<resources>
    <string name="app_name">Team21_App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="msg">drawLogo</string>
    <string name="assignment">Assignment</string>
    <string name="rewards">Reward</string>
    <string name="quests">Quests</string>
    <string name="status">Status</string>
    <string name="home">Home</string>
    <string-array name="termselector">
        <item>All</item>
        <item>Term 1</item>
        <item>Term 2</item>
        <item>Term 3</item>
    </string-array>
    <string-array name="points">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_spinner">spinner</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="points">1700 Points</string>
</resources>
