<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C9DFF">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/angled_orange" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/bottom_bar" />

    <Button
        android:id="@+id/button4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/assignment_icon"
        android:text="@string/quests"
        android:textColor="#6D6D6D"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/status_icon"
        android:text="@string/status"
        android:textColor="#6D6D6D"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/home_icon"
        android:text="@string/home"
        android:textColor="#6D6D6D"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_21_logo_white" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/status"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/reward_icon"
        android:text="@string/rewards"
        android:textColor="#6D6D6D"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/secondMark"
        android:layout_width="371dp"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:background="#FFF"
        android:outlineAmbientShadowColor="#000000"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/assignment"
            app:layout_constraintEnd_toEndOf="@+id/secondMark"
            app:layout_constraintStart_toStartOf="@+id/secondMark"
            app:layout_constraintTop_toTopOf="@+id/secondMark"
            app:srcCompat="@drawable/half_rounded_bar_top" />

        <Button
            android:id="@+id/button2"
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_gravity="right|top"
            android:layout_marginTop="13dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#EAEAEA"
            android:gravity="left|center"
            android:text="Term 1" />

        <!--        <Button-->
        <!--            android:id="@+id/button2"-->
        <!--            android:layout_width="75dp"-->
        <!--            android:layout_height="25dp"-->
        <!--            android:layout_gravity="right|top"-->
        <!--            android:layout_marginRight="20dp"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:layout_marginTop="13dp"-->
        <!--            android:background="@drawable/rounded_corners"-->
        <!--            android:backgroundTint="#EAEAEA"-->
        <!--            android:gravity="left|center"-->
        <!--            >-->

        <!--            <TextView-->
        <!--                android:id="@+id/selectorbutton"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:fontFamily="monospace"-->
        <!--                android:paddingLeft="15dp"-->
        <!--                android:text="Term 1 ▾"-->
        <!--                android:textSize="12dp"-->
        <!--                />-->
        <!--        </Button>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="monospace"
            android:text="Assignments on time:"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintVertical_bias="0.562" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart1"
            android:layout_width="371dp"
            android:layout_height="218dp"
            android:layout_marginTop="50dp">

        </com.github.mikephil.charting.charts.BarChart>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/mark"
        android:layout_width="371dp"
        android:layout_height="300dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20dp"
        android:background="#FFF"
        android:outlineAmbientShadowColor="#000000"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondMark">

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="371dp"
            android:layout_height="51dp"
            android:contentDescription="@string/assignment"
            app:layout_constraintEnd_toEndOf="@+id/secondMark"
            app:layout_constraintStart_toStartOf="@+id/secondMark"
            app:layout_constraintTop_toTopOf="@+id/secondMark"
            app:srcCompat="@drawable/half_rounded_bar_top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="monospace"
            android:text="Average Missed Assignments:"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintVertical_bias="0.562" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart2"
            android:layout_width="371dp"
            android:layout_height="218dp"
            android:layout_marginTop="50dp" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:src="@drawable/cog_wheel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>