<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C9DFF">

    <!-- Background -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/angled_orange" />

    <!-- Header -->

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_21_logo_white" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/quests"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:src="@drawable/cog_wheel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- END header -->

    <!-- Search bar -->
    <SearchView
        android:layout_width="371dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Overdue/Upcoming Selector -->

    <Button
        android:id="@+id/overdueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="204dp"
        android:background="@drawable/half_rounded_corners_left_transparent"
        android:text="Overdue"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/upcomingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/half_rounded_corners_right"
        android:text="Upcoming"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@+id/overdueButton"
        app:layout_constraintTop_toTopOf="@+id/overdueButton" />

    <!-- END Overdue/Upcoming Selector -->

    <!-- Assignments card recycler -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/assignmentRecycler"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="306dp"
        android:layout_marginTop="182dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/container"
        app:layout_constraintTop_toTopOf="@+id/container" />


<!--    &lt;!&ndash; Assignment CardView &ndash;&gt;-->
<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/assignmentCard"-->
<!--        android:layout_width="371dp"-->
<!--        android:layout_height="130dp"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:outlineAmbientShadowColor="#000000"-->
<!--        app:cardCornerRadius="25dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/imageView3"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        &lt;!&ndash; Subject tag &ndash;&gt;-->
<!--        <androidx.cardview.widget.CardView-->
<!--            android:layout_width="95dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_gravity="end"-->
<!--            android:layout_margin="15dp"-->
<!--            android:backgroundTint="#648BFF"-->
<!--            app:cardCornerRadius="15dp">-->

<!--            <TextView-->
<!--                android:id="@+id/assignmentSubject"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:text="ICE CREAM"-->
<!--                android:textColor="#FFFFFF" />-->
<!--        </androidx.cardview.widget.CardView>-->

<!--        <TextView-->
<!--            android:id="@+id/assignmentDueDate"-->
<!--            android:layout_width="310dp"-->
<!--            android:layout_height="100dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:text="Next Assignment"-->
<!--            android:textColor="#000000"-->
<!--            android:textSize="14sp" />-->

<!--        <TextView-->
<!--            android:id="@+id/assignmentName"-->
<!--            android:layout_width="310dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:text="Cinemagraph"-->
<!--            android:textColor="#000000"-->
<!--            android:textSize="20sp" />-->

<!--        <ImageView-->
<!--            android:id="@+id/imageView8"-->
<!--            android:layout_width="361dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="bottom"-->
<!--            app:srcCompat="@drawable/half_rounded_bar_bottom" />-->

<!--        <TextView-->
<!--            android:id="@+id/assignmentPoints"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="26dp"-->
<!--            android:layout_gravity="bottom"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:text="100 points"-->
<!--            android:textColor="#000000"-->
<!--            android:textSize="12sp" />-->

<!--        <TextView-->
<!--            android:id="@+id/moreDetail"-->
<!--            android:layout_width="309dp"-->
<!--            android:layout_height="26dp"-->
<!--            android:layout_gravity="bottom"-->
<!--            android:layout_marginStart="300dp"-->
<!--            android:text="Detail    →"-->
<!--            android:textColor="#000000"-->
<!--            android:textSize="12sp" />-->

<!--    </androidx.cardview.widget.CardView>-->

    <!-- Footer -->

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/bottom_bar" />

    <Button
        android:id="@+id/button4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/assignment_icon"
        android:text="@string/quests"
        android:textColor="#6D6D6D"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/status_icon"
        android:text="@string/status"
        android:textColor="#6D6D6D"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/home_icon"
        android:text="@string/home"
        android:textColor="#6D6D6D"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/reward_icon"
        android:text="@string/rewards"
        android:textColor="#6D6D6D"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <!-- END footer -->

</androidx.constraintlayout.widget.ConstraintLayout>