<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1C9DFF">

    <ImageView
        android:id="@+id/cutOrangeBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/angled_orange" />

    <ImageView
        android:id="@+id/menuHalfBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cutOrangeBar"
        app:srcCompat="@drawable/bottom_bar" />

    <Button
        android:id="@+id/questButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/assignment_icon"
        android:onClick="goToQuestspage"
        android:text="@string/quests"
        android:textColor="#6D6D6D"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/statusButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menuHalfBar" />

    <Button
        android:id="@+id/statusButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/status_icon"
        android:onClick="goToStatuspage"
        android:text="@string/status"
        android:textColor="#6D6D6D"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rewardsButton"
        app:layout_constraintTop_toTopOf="@+id/menuHalfBar" />

    <Button
        android:id="@+id/rewardsButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/reward_icon"
        android:onClick="goToRewardspage"
        android:text="@string/rewards"
        android:textColor="#6D6D6D"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/menuHalfBar"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="@+id/menuHalfBar" />

    <Button
        android:id="@+id/homeButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:drawableTop="@drawable/home_icon"
        android:onClick="goToHomepage"
        android:text="@string/home"
        android:textColor="#6D6D6D"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/questButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/menuHalfBar" />

    <ImageView
        android:id="@+id/logo_21"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_21_logo_white" />

    <TextView
        android:id="@+id/rewardsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/rewards"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/rewardsBackgroundImage"
        android:layout_width="371dp"
        android:layout_height="649dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="4dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/menuHalfBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <ImageView
            android:id="@+id/rewardsHalfBar"
            android:layout_width="371dp"
            android:layout_height="51dp"
            android:src="@drawable/half_rounded_bar_top" >

        </ImageView>

        <TextView
            android:id="@+id/giftCardsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Draw"
            android:textSize="15dp"
            android:layout_gravity="left"
            android:textColor="#2F2F2F"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/pointsValueBox"
            android:layout_width="100dp"
            android:layout_height="35dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#DEDEDE"
            app:cardElevation="0dp"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_marginRight="15dp"
            >

            <TextView
                android:id="@+id/pointsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1700 Points"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:textColor="#2F2F2F"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/itemcChoseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="60dp"
            android:text="Item Chosen"
            android:textColor="#000000"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/displayCard"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/amazon_gc" />

        <TextView
            android:id="@+id/cardCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$25"
            android:layout_marginStart="290dp"
            android:layout_marginTop="200dp"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/currentEntries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="49 current entries"
            android:textColor="#9D9D9D"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buyButton"
            android:layout_width="270dp"
            android:layout_height="40dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"
            android:layout_marginTop="250dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#0A69B3"
            android:fontFamily="monospace"
            android:gravity="center"
            android:text="Buy"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:text="Buy" />

        <TextView
            android:id="@+id/ptsCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000pts"
            android:layout_marginStart="210dp"
            android:layout_marginTop="200dp"
            android:textSize="18sp"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/selectaoe" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="120dp"
            android:background="#0A69B3"
            android:entries="@array/points" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:src="@drawable/cog_wheel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>